# storage/api-docs/api-docs.json
@@ -6585,24 +6585,6 @@
             "Doctor": {
                 "required": [],
                 "properties": {
-                    "user_id": {
-                        "description": "User ID",
-                        "type": "string",
-                        "readOnly": false,
-                        "nullable": false
-                    },
-                    "specialization_id": {
-                        "description": "",
-                        "type": "string",
-                        "readOnly": false,
-                        "nullable": true
-                    },
-                    "experience_years": {
-                        "description": "",
-                        "type": "string",
-                        "readOnly": false,
-                        "nullable": true
-                    },
                     "mdcn_license": {
                         "description": "",
                         "type": "string",
@@ -7235,6 +7217,9 @@
                         "type": "string",
                         "readOnly": false,
                         "nullable": false
+                    },
+                    "role": {
+                        "type": "string"
                     },
                     "remember_token": {
                         "description": "",
